feat:add Domain.model test